# linux-game-haptics-router

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  codecov.yml
.github/: dependabot.yml
.github/actions/rust-bpf-setup/: action.yml
.github/workflows/: audit.yml  build-release.yml  ci.yml  pre-commit.yml  release.yml
docs/superpowers/plans/: 2026-07-06-e2e-vm-harness.md  2026-07-09-ff-play-upload-race.md
docs/superpowers/specs/: 2026-07-05-e2e-vm-harness-design.md  2026-07-07-ff-play-upload-race-design.md
e2e/: run.sh
e2e/cloud-init/: meta-data  user-data.tmpl
haptics-probe/: Cargo.toml  build.rs
haptics-probe-common/: Cargo.toml
haptics-probe-common/src/: lib.rs
haptics-probe-ebpf/: Cargo.toml
haptics-probe-ebpf/src/: main.rs
haptics-probe/src/: app.rs  device.rs  ebpf.rs  main.rs  playback.rs  throttle.rs  translate.rs
linux-game-haptics-router/: Cargo.toml  build.rs
linux-game-haptics-router-common/: Cargo.toml
linux-game-haptics-router-common/src/: lib.rs
linux-game-haptics-router-e2e/: Cargo.toml
linux-game-haptics-router-e2e/src/: gamepad.rs  lib.rs  protocol_server.rs  scenarios.rs  timing.rs
linux-game-haptics-router-ebpf/: Cargo.toml
linux-game-haptics-router-ebpf/src/: main.rs
linux-game-haptics-router/src/: app.rs  ebpf.rs  main.rs  playback.rs  translate.rs
