[package]
name = "haptics-probe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "haptics-probe"
path = "src/main.rs"

[dependencies]
aya            = { version = "0.13", features = ["async_tokio"] }
aya-log        = "0.2"
haptics-probe-common = { path = "../haptics-probe-common", features = ["user"] }
bson           = "2"
evdev          = "0.12"
tokio          = { version = "1", features = ["full"] }
anyhow         = "1"
serde          = { version = "1", features = ["derive"] }
log            = "0.4"
env_logger     = "0.11"
serde_json     = "1"

[build-dependencies]
aya-build = "0.1"
