[package]
name = "haptics-probe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "haptics-probe"
path = "src/main.rs"

[dependencies]
aya            = "0.14"
aya-log        = "0.3"
haptics-probe-common = { path = "../haptics-probe-common", features = ["user"] }
evdev          = "0.12"
tokio          = { version = "1", features = ["full"] }
anyhow         = "1"
serde          = { version = "1", features = ["derive"] }
log            = "0.4"
env_logger     = "0.11"
serde_json     = "1"
buttplug = "10.0.3"

[build-dependencies]
aya-build = "0.2"
