[package]
name = "linux-game-haptics-router-e2e"
version = "0.1.0"
edition = "2021"

[lib]
name = "linux_game_haptics_router_e2e"
path = "src/lib.rs"

[[bin]]
name = "e2e-tests"
path = "src/bin/e2e-tests.rs"

[dependencies]
evdev            = "0.13"
buttplug_core    = "10.0.3"
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = "0.30"
futures-util     = "0.3"
serde_json       = "1"
anyhow           = "1"
log              = "0.4"
env_logger       = "0.11"
