[package]
name = "linux-game-haptics-router"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "game-haptics-router"
path = "src/main.rs"

[dependencies]
aya            = "0.14"
aya-log        = "0.3"
linux-game-haptics-router-common = { path = "../linux-game-haptics-router-common", features = ["user"] }
evdev          = "0.13"
tokio          = { version = "1", features = ["full"] }
anyhow         = "1"
serde          = { version = "1", features = ["derive"] }
log            = "0.4"
env_logger     = "0.11"
serde_json     = "1"
buttplug = "10.0.3"
clap           = { version = "4", features = ["derive"] }

[build-dependencies]
aya-build = "0.2"
